:bug: message 提高z-index层级

--- a/src/styles/src/message.scss
+++ b/src/styles/src/message.scss
@@ -14,6 +14,7 @@ $modifier-separator: '--';
   position: fixed;
   left: 50%;
   top: 20px;
+  z-index: 2000;
   transform: translateX(-50%);
   background-color: #edf2fc;
   transition: opacity 0.3s, -webkit-transform 0.4s;
